package com.jimmyh123.wordsearch.util

object TestTags {

    const val NUMBER_OF_SKIPS_COUNTER = "NUMBER_OF_SKIPS_COUNTER"
    const val WORDS_COMPLETED_COUNTER = "WORDS_COMPLETED_COUNTER"
}